# ClubBDManga

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  manage.py  nginx.conf  pyproject.toml  requirements.txt  settings.py
.github/workflows/: certificate.yml  deploy.yml  dump.yml  shutdown.yml
asso/: admin.py  apps.py  models.py  urls.py  views.py
asso/migrations/: 0001_initial.py  0001_squashed_0012_remove_loan_late_return.py  0001_squashed_0022_rename_bail_member_deposit.py  0002_alter_loan_member_alter_member_role_alir_and_more.py  0003_member_can_make_loan_member_is_alir_member_and_more.py  0004_remove_member_last_loan_remove_member_loan_length_and_more.py  0005_remove_member_archived_member_has_paid_and_more.py  0006_member_account_alter_member_is_alir_member.py  0007_alter_member_account.py  0008_member_last_name_alter_member_name.py  0009_rename_name_member_first_name_alter_member_account.py  0010_rename_mail_member_email.py  0011_alter_member_account.py  0012_remove_loan_late_return.py  0013_remove_member_is_alir_member_alter_member_account_and_more.py  0014_alter_member_tel.py  0015_news.py  0016_alter_news_options_news_date_news_slug_news_title_and_more.py  0017_news_summary_alter_news_date.py  0018_news_visible_alter_news_content_alter_news_summary.py  0019_page_remove_news_visible_alter_news_date.py  (+5 more)
bdmanga/: admin.py  asgi.py  settings.py  urls.py  views.py  wsgi.py
clubBDM/: admin.py  asgi.py  settings.py  urls.py  wsgi.py
inventory/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
nginx/: default.conf
(+59 files in other folders)
