[project]
name = "ClubBDManga"
version = "0.1.0"
description = "A web app for managing books in INSA Lyon's Club BD Manga library"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICEN[CS]E"]
readme = "README.md"
keywords = ["web app", "Django", "Bootstrap", "library management"]
authors = [
  {name = "Lysquid"},
]
dependencies = [
    "Django>=5.2.3,<6.0",
    "mysqlclient>=2.2.7,<3.0",
    "markdown>=3.8,<4.0",
]

[project.optional-dependencies]
prod = [
    "gunicorn>=23.0.0,<24.0"
]

[project.urls]
Homepage = "https://bdmanga.insalgo.fr"
Repository = "https://github.com/Lysquid/ClubBDManga"
